4_tool/ingress/argocd/prd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-http
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: nginx-internal
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: argocd.prd.domain.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: argocd-server
            port:
              number: 443
  tls:
  - hosts:
    - argocd.prd.domain.com
    secretName: your-certificate-name
